--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ main {
   grid-template-areas:
     "logo . ."
     "logo title supportId"
-    "logo subtitle .";
+    "logo subtitle clear-btn";
 }
 
 .chatbot-header > * {
@@ -61,7 +61,23 @@ main {
 .supportId {
   font-size: 10px;
   grid-area: supportId;
-  text-align: right;
+  text-align: center;
+}
+
+.clear-btn {
+  grid-area: clear-btn;
+  height: 20px;
+  padding: 0;
+  width: 80%;
+  color: var(--medium-light-text);
+  font-size: 12px;
+  margin: 0 auto;
+}
+
+.clear-btn:hover {
+  border: 1px solid #24976f;
+  color: #24976f;
+  cursor: pointer;
 }
 
 .chatbot-conversation-container {
@@ -123,7 +139,7 @@ input[type="text"] {
   border-bottom-right-radius: 0;
 }
 
-button {
+.submit-btn {
   border-left: 0;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
